# pnet_dart

./: .gitmodules  .metadata  CHANGELOG.md  CONTRIBUTING.md  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: pnet.dart  pnet_dart.dart  pnet_dart_method_channel.dart  pnet_dart_platform_interface.dart
lib/src/: bindings.dart  dylib.dart  pnet.dart  pnet_error.dart  pnet_il.dart  pnet_matrix.dart
linux/: CMakeLists.txt  pnet_dart_plugin.cc
linux/include/pnet_dart/: pnet_dart_plugin.h
linux/libpnet/: CMakeLists.txt
modules/pnet_dart_interop/: pnet_dart_interop.c
test/: pnet_dart_method_channel_test.dart  pnet_dart_test.dart
windows/: CMakeLists.txt  pnet_dart_plugin.cpp  pnet_dart_plugin.h  pnet_dart_plugin_c_api.cpp
windows/include/pnet_dart/: pnet_dart_plugin_c_api.h
